--- a/config.toml
+++ b/config.toml
@@ -3,4 +3,4 @@ primaryColor="#FF4B4B"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#31333F"
-font="comic sans"
+font="monospace"
